--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    hello world
-
-    <script src="./app.js"></script>
+    hello world with ejs
+    <div>
+        <img class="bong" src="/images/Bong.jpg" />
+    </div>
 </body>
 </html>
